# ffmpeg-parallel

./: .gitignore  README.md  pyproject.toml
src/ffmpeg_parallel/: cli.py  core.py
tests/: test.py  test_core.py
