
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-parallel"
version = "0.0.10"
authors = [
  { name="EarthasaurusRex", email="earthasaurusrex@gmail.com" },
]
description = "A tool to run ffmpeg encodes in parallel."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
]

[project.scripts]
ffmpeg-parallel = "ffmpeg_parallel.cli:main"
